feat: added autoscanning audio files | code improve

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   --background-light: #ffffff;
   --text-light: #213547;
 
-  font-family: 'Inter', system-ui, sans-serif;
+  font-family: "Inter", system-ui, sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -83,14 +83,60 @@ code {
   }
 }
 
-
 @keyframes bounce-play {
-  0%   { transform: scaleY(1); }
-  10%  { transform: scaleY(2.4); }
-  25%  { transform: scaleY(0.3); }
-  40%  { transform: scaleY(1.9); }
-  55%  { transform: scaleY(0.1); }
-  70%  { transform: scaleY(1.6); }
-  85%  { transform: scaleY(0.2); }
-  100% { transform: scaleY(1); }
+  0% {
+    transform: scaleY(1);
+  }
+  10% {
+    transform: scaleY(2.4);
+  }
+  25% {
+    transform: scaleY(0.3);
+  }
+  40% {
+    transform: scaleY(1.9);
+  }
+  55% {
+    transform: scaleY(0.1);
+  }
+  70% {
+    transform: scaleY(1.6);
+  }
+  85% {
+    transform: scaleY(0.2);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
+
+button:focus,
+button:focus-visible {
+  outline: none;
+}
+
+
+/* For WebKit (Chrome, Edge, Safari) */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #555;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #777;
+}
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #555 transparent;
 }
